[package]
name = "dungeon_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib" }
#host = { path = "../host"}
host = { git = "https://gitlab.com/tezos/kernel/" }
debug = { git = "https://gitlab.com/tezos/kernel/" }
kernel = {git = "https://gitlab.com/tezos/kernel/"}
mock_runtime = { git = "https://gitlab.com/tezos/kernel/" }

[features]
default = []
dungeon-kernel = []
non = ["dungeon-kernel"]
abort = ["dungeon-kernel"]
read-input = ["dungeon-kernel"]
all = ["read-input", "dungeon-kernel"]
