[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
host = { path = "../host"}
debug = {path = "../debug"}
panic_handler = { path = "../panic_handler", default_features = false}
mock_runtime = { path = "../mock_runtime"}

