[package]
name = "test_counter_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
host = { path = "../host" }
debug = { path = "../debug" }
kernel = { path = "../kernel_entry_simpl", default-features = false}
mock_runtime = { path = "../mock_runtime" , default-features = false}

[features]
default = []
test-counter-kernel = []
non = ["test-counter-kernel"]
abort = ["test-counter-kernel"]
write-debug = ["test-counter-kernel"]
read-input = ["test-counter-kernel"]
write-output = ["test-counter-kernel"]
all = ["read-input", "write-output", "test-counter-kernel"]