[package]
name = "test_tx_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
host = { path = "../host" }
debug = { path = "../debug" }
kernel = { path = "../kernel_entry_simpl", default-features = false}
mock_runtime = { path = "../mock_runtime" , default-features = false}

[features]
test-tx-kernel = []
testing=["test-tx-kernel"]