[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
 crate-type = ["cdylib", "rlib"]

[dependencies]
# use kernel_entry 
kernel = { git = "https://gitlab.com/tezos/kernel/-/tree/main/kernel_entry" }
# copy from the kernel sdk
host = { git = "https://gitlab.com/tezos/kernel/-/tree/main/host", default-features = false }
# use crypto
crypto = { git = "https://github.com/emturner/tezedge.git", branch = "master", default-features = false, features = ["no_sodium"] }
# use serde and serde_json
serde = { version = "1.0" } 
serde_json = { version = "1.0" } 


[features]
 default = ["tx-kernel"]
 tx-kernel = []
 tx-kernel-no-sig-verif = ["tx-kernel"]