[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
 crate-type = ["cdylib", "rlib"]

[dependencies]
# use kernel, host from a downloaded kernel folder
kernel = { path = "/home/quyen/kernel/kernel_entry" }

# copy from the kernel sdk
host = { path = "/home/quyen/kernel/host", default-features = false  }

# use debug
debug = {path = "/home/quyen/kernel/debug"}

# use crypto
crypto = { git = "https://github.com/emturner/tezedge.git", branch = "master", default-features = false, features = ["no_sodium"] }

# use serde and serde_json
serde = { version = "1.0" } 
serde_json = { version = "1.0" } 

blst = { version = "0.3.7" }
nom="6.1"
thiserror="1.0"
num-bigint = "0.3"
num-traits = "0.2.8"

rand = { version = "0.8", optional = true }

[features]
 default = ["tx-kernel"]
 tx-kernel = []
 tx-kernel-no-sig-verif = ["tx-kernel"]